<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ContactDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detalhes_do_contato"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/image_contact"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginVertical="10dp"
        android:src="@drawable/default_profile" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/edit_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/endereco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/email" />

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/baseline_email_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/telefone"
            android:inputType="number" />

        <ImageView
            android:id="@+id/image_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/baseline_phone_24" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_editar"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btn_voltar"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/voltar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_salvar"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btn_cancelar"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btn_deletar"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/deletar" />
    </LinearLayout>

</LinearLayout>