<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@id/layout_campos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/default_profile" />

    <LinearLayout
        android:id="@+id/layout_campos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:gravity="center"
            android:hint="@string/nome_usuario" />

        <EditText
            android:id="@+id/editpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:gravity="center"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkbox_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/manter_me_conectado"
            app:buttonIconTint="#FFFFFF" />

        <Button
            android:id="@+id/btn_entrar"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/nao_tem_uma_conta_cadastre_se" />

    <TextView
        android:id="@+id/text_esqueci_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_cadastrar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/esqueci_minha_senha" />

</RelativeLayout>