<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@id/layout_campos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/default_profile" />

    <LinearLayout
        android:id="@+id/layout_campos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/editusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:gravity="center"
            android:hint="@string/nome_usuario" />

        <EditText
            android:id="@+id/editpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:gravity="center"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editconfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:gravity="center"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_cadastrar"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/cadastrar" />

    </LinearLayout>

</RelativeLayout>